--- a/header.html
+++ b/header.html
@@ -230,36 +230,87 @@
 					</nav>
 
 					<div class="btn-section">
-						<button class="callus-btn">
-							<svg
-								width="20"
-								height="20"
-								viewBox="0 0 20 20"
-								fill="none"
-								xmlns="http://www.w3.org/2000/svg"
-							>
-								<g clip-path="url(#clip0_424_301)">
-									<path
-										d="M15.2051 13.2304C14.5517 12.5853 13.736 12.5853 13.0867 13.2304C12.5915 13.7215 12.0962 14.2126 11.6093 14.712C11.4761 14.8494 11.3638 14.8785 11.2014 14.7869C10.881 14.6121 10.5397 14.4706 10.2317 14.2792C8.79592 13.3761 7.59315 12.2149 6.52773 10.9081C5.99918 10.2589 5.52889 9.56385 5.20011 8.78143C5.13352 8.62328 5.14601 8.51924 5.27502 8.39022C5.77028 7.91162 6.25305 7.42052 6.73998 6.92943C7.41836 6.24689 7.41836 5.44782 6.73582 4.76112C6.34877 4.36991 5.96172 3.98703 5.57467 3.59582C5.17514 3.19628 4.77977 2.79259 4.37607 2.39721C3.72267 1.76046 2.90695 1.76046 2.25771 2.40138C1.75829 2.89247 1.27968 3.39605 0.771944 3.87882C0.301659 4.32413 0.0644358 4.86933 0.014494 5.50609C-0.0645804 6.54238 0.18929 7.5204 0.547206 8.47346C1.27968 10.4462 2.39505 12.1983 3.74764 13.8047C5.57467 15.9772 7.75546 17.696 10.3067 18.9363C11.4553 19.4939 12.6456 19.9226 13.9399 19.9934C14.8305 20.0433 15.6046 19.8186 16.2247 19.1235C16.6493 18.6491 17.1279 18.2163 17.5773 17.7626C18.2432 17.0884 18.2474 16.2727 17.5857 15.6068C16.7949 14.8119 16 14.0212 15.2051 13.2304Z"
-										fill="white"
-									/>
-									<path
-										d="M14.4106 9.91346L15.9463 9.65126C15.7049 8.24041 15.039 6.96273 14.0277 5.94725C12.9581 4.87767 11.6055 4.20345 10.1156 3.99536L9.89917 5.53939C11.052 5.7017 12.1008 6.22193 12.929 7.05013C13.7114 7.83255 14.2233 8.82306 14.4106 9.91346Z"
-										fill="white"
-									/>
-									<path
-										d="M16.8114 3.23789C15.0384 1.46496 12.7952 0.34543 10.319 0L10.1025 1.54403C12.2417 1.84368 14.1811 2.81338 15.7127 4.34077C17.1651 5.79324 18.1182 7.6286 18.4636 9.64708L19.9993 9.38488C19.5956 7.04595 18.4928 4.92342 16.8114 3.23789Z"
-										fill="white"
-									/>
-								</g>
-								<defs>
-									<clipPath id="clip0_424_301">
-										<rect width="20" height="20" fill="white" />
-									</clipPath>
-								</defs>
-							</svg>
-							Заказать звонок
-						</button>
+						<div class="callus-container">
+							<button class="callus-btn">
+								<svg
+									width="20"
+									height="20"
+									viewBox="0 0 20 20"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<g clip-path="url(#clip0_424_301)">
+										<path
+											d="M15.2051 13.2304C14.5517 12.5853 13.736 12.5853 13.0867 13.2304C12.5915 13.7215 12.0962 14.2126 11.6093 14.712C11.4761 14.8494 11.3638 14.8785 11.2014 14.7869C10.881 14.6121 10.5397 14.4706 10.2317 14.2792C8.79592 13.3761 7.59315 12.2149 6.52773 10.9081C5.99918 10.2589 5.52889 9.56385 5.20011 8.78143C5.13352 8.62328 5.14601 8.51924 5.27502 8.39022C5.77028 7.91162 6.25305 7.42052 6.73998 6.92943C7.41836 6.24689 7.41836 5.44782 6.73582 4.76112C6.34877 4.36991 5.96172 3.98703 5.57467 3.59582C5.17514 3.19628 4.77977 2.79259 4.37607 2.39721C3.72267 1.76046 2.90695 1.76046 2.25771 2.40138C1.75829 2.89247 1.27968 3.39605 0.771944 3.87882C0.301659 4.32413 0.0644358 4.86933 0.014494 5.50609C-0.0645804 6.54238 0.18929 7.5204 0.547206 8.47346C1.27968 10.4462 2.39505 12.1983 3.74764 13.8047C5.57467 15.9772 7.75546 17.696 10.3067 18.9363C11.4553 19.4939 12.6456 19.9226 13.9399 19.9934C14.8305 20.0433 15.6046 19.8186 16.2247 19.1235C16.6493 18.6491 17.1279 18.2163 17.5773 17.7626C18.2432 17.0884 18.2474 16.2727 17.5857 15.6068C16.7949 14.8119 16 14.0212 15.2051 13.2304Z"
+											fill="white"
+										/>
+										<path
+											d="M14.4106 9.91346L15.9463 9.65126C15.7049 8.24041 15.039 6.96273 14.0277 5.94725C12.9581 4.87767 11.6055 4.20345 10.1156 3.99536L9.89917 5.53939C11.052 5.7017 12.1008 6.22193 12.929 7.05013C13.7114 7.83255 14.2233 8.82306 14.4106 9.91346Z"
+											fill="white"
+										/>
+										<path
+											d="M16.8114 3.23789C15.0384 1.46496 12.7952 0.34543 10.319 0L10.1025 1.54403C12.2417 1.84368 14.1811 2.81338 15.7127 4.34077C17.1651 5.79324 18.1182 7.6286 18.4636 9.64708L19.9993 9.38488C19.5956 7.04595 18.4928 4.92342 16.8114 3.23789Z"
+											fill="white"
+										/>
+									</g>
+									<defs>
+										<clipPath id="clip0_424_301">
+											<rect width="20" height="20" fill="white" />
+										</clipPath>
+									</defs>
+								</svg>
+								Заказать звонок
+							</button>
+
+							<div class="callus-dropdown">
+								<ul class="main-phone">
+									<li>
+										<a class="main-phone__element" href="#"
+											>+48 555 012 456 - Wroclaw</a
+										>
+
+										<span class="arrow"
+											><svg
+												class="arrow-icon"
+												width="16"
+												height="8"
+												viewBox="0 0 16 8"
+												fill="none"
+												xmlns="http://www.w3.org/2000/svg"
+											>
+												<path
+													d="M15.5 0.5L8 7.16667L0.5 0.499999"
+													stroke="#131313"
+													stroke-linecap="round"
+												/>
+											</svg>
+										</span>
+									</li>
+								</ul>
+								<ul class="extra-phones">
+									<li>
+										<a class="main-phone__element" href="#"
+											>+48 555 012 456 - Wroclaw</a
+										>
+									</li>
+									<li>
+										<a class="main-phone__element" href="#"
+											>+48 555 012 456 - Wroclaw</a
+										>
+									</li>
+									<li>
+										<a class="main-phone__element" href="#"
+											>+48 555 012 456 - Wroclaw</a
+										>
+									</li>
+									<li>
+										<a class="main-phone__element" href="#"
+											>+48 555 012 456 - Wroclaw</a
+										>
+									</li>
+								</ul>
+							</div>
+						</div>
 
 						<button class="search-btn">
 							<svg
@@ -311,6 +362,16 @@
 				</div>
 			</div>
 		</header>
+
+		<br />
+		<br />
+		<br />
+		<br />
+		<br />
+
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius
+		qui repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam?
 
 		<script src="./scripts/header.js"></script>
 	</body>
