complete desktop header

--- a/header.html
+++ b/header.html
@@ -229,6 +229,44 @@
 						</ul>
 					</nav>
 
+					<div class="search-bar" id="search-bar">
+						<svg
+							class="search-bar__icon"
+							width="20"
+							height="20"
+							viewBox="0 0 20 20"
+							fill="none"
+							xmlns="http://www.w3.org/2000/svg"
+						>
+							<path
+								d="M18.6559 18.6559L14.4124 14.4124M16.7004 8.87813C16.7004 13.1982 13.1982 16.7004 8.87813 16.7004C4.55804 16.7004 1.05591 13.1982 1.05591 8.87813C1.05591 4.55804 4.55804 1.05591 8.87813 1.05591C13.1982 1.05591 16.7004 4.55804 16.7004 8.87813Z"
+								stroke="url(#paint0_linear_search)"
+								stroke-width="2.112"
+								stroke-linecap="round"
+								stroke-linejoin="round"
+							/>
+							<defs>
+								<linearGradient
+									id="paint0_linear_search"
+									x1="1.05591"
+									y1="1.05591"
+									x2="19.2224"
+									y2="1.66145"
+									gradientUnits="userSpaceOnUse"
+								>
+									<stop stop-color="#092B96" />
+									<stop offset="1" stop-color="#086CDC" />
+								</linearGradient>
+							</defs>
+						</svg>
+						<input
+							type="text"
+							class="search-bar__input"
+							placeholder="Поиск на сайте"
+							id="search-input"
+						/>
+					</div>
+
 					<div class="btn-section">
 						<div class="callus-container">
 							<button class="callus-btn">
