added services dropdown

--- a/header.html
+++ b/header.html
@@ -220,12 +220,128 @@
 
 					<nav>
 						<ul class="navigation">
-							<li><a class="navigation-link" href="#">Главная</a></li>
-							<li><a class="navigation-link" href="#">О нас</a></li>
-							<li><a class="navigation-link" href="#">Услуги</a></li>
-							<li><a class="navigation-link" href="#">Блог</a></li>
-							<li><a class="navigation-link" href="#">Прайс</a></li>
-							<li><a class="navigation-link" href="#">Контакты</a></li>
+							<li class="navigation-el">
+								<a class="navigation-link" href="#">Главная</a>
+							</li>
+							<li class="navigation-el">
+								<a class="navigation-link" href="#">О нас</a>
+							</li>
+							<li class="services-dropdown__container navigation-el">
+								<button class="navigation-link" id="services-btn">
+									Услуги
+									<svg
+										width="5"
+										height="4"
+										viewBox="0 0 5 4"
+										fill="none"
+										xmlns="http://www.w3.org/2000/svg"
+									>
+										<defs>
+											<linearGradient
+												id="hoverGradient"
+												x1="2.16504"
+												y1="-1.25"
+												x2="2.16504"
+												y2="3.75"
+												gradientUnits="userSpaceOnUse"
+											>
+												<stop stop-color="#597BE6" />
+												<stop offset="1" stop-color="#030E30" />
+											</linearGradient>
+										</defs>
+										<path
+											d="M0.762207 0.44043L3.81103 0.44043L2.28662 3.08008L0.762207 0.44043Z"
+											fill="black"
+											stroke="black"
+											stroke-width="0.88"
+										/>
+									</svg>
+								</button>
+
+								<ul class="services-dropdown">
+									<li class="services-dropdown__el">
+										<div class="services-link__circle">
+											<div class="services-link__circle-inner"></div>
+										</div>
+										<a href="#">Карта временного пребывания</a>
+									</li>
+									<li class="services-dropdown__el">
+										<div class="services-link__circle">
+											<div class="services-link__circle-inner"></div>
+										</div>
+										<a href="#">Карта постоянного пребывания</a>
+									</li>
+									<li class="services-dropdown__el">
+										<div class="services-link__circle">
+											<div class="services-link__circle-inner"></div>
+										</div>
+										<a href="#">Польское гражданство</a>
+									</li>
+									<li class="services-dropdown__el">
+										<div class="services-link__circle">
+											<div class="services-link__circle-inner"></div>
+										</div>
+										<a href="#">Ускорение процессов</a>
+									</li>
+									<li class="services-dropdown__el">
+										<div class="services-link__circle">
+											<div class="services-link__circle-inner"></div>
+										</div>
+										<a href="#">Услуги для бизнеса</a>
+									</li>
+									<li class="services-dropdown__el">
+										<div class="services-link__circle">
+											<div class="services-link__circle-inner"></div>
+										</div>
+										<a href="#">Автомобильные услуги</a>
+									</li>
+									<li class="services-dropdown__el">
+										<div class="services-link__circle">
+											<div class="services-link__circle-inner"></div>
+										</div>
+										<a href="#">Приглашения для визы</a>
+									</li>
+									<li class="services-dropdown__el">
+										<div class="services-link__circle">
+											<div class="services-link__circle-inner"></div>
+										</div>
+										<a href="#">Страхование</a>
+									</li>
+									<li class="services-dropdown__el">
+										<div class="services-link__circle">
+											<div class="services-link__circle-inner"></div>
+										</div>
+										<a href="#">Доверенности</a>
+									</li>
+									<li class="services-dropdown__el">
+										<div class="services-link__circle">
+											<div class="services-link__circle-inner"></div>
+										</div>
+										<a href="#">Справки</a>
+									</li>
+									<li class="services-dropdown__el">
+										<div class="services-link__circle">
+											<div class="services-link__circle-inner"></div>
+										</div>
+										<a href="#">Разрешения на работу</a>
+									</li>
+									<li class="services-dropdown__el">
+										<div class="services-link__circle">
+											<div class="services-link__circle-inner"></div>
+										</div>
+										<a href="#">Другие услуги</a>
+									</li>
+								</ul>
+							</li>
+							<li class="navigation-el">
+								<a class="navigation-link" href="#">Блог</a>
+							</li>
+							<li class="navigation-el">
+								<a class="navigation-link" href="#">Прайс</a>
+							</li>
+							<li class="navigation-el">
+								<a class="navigation-link" href="#">Контакты</a>
+							</li>
 						</ul>
 					</nav>
 
@@ -409,6 +525,66 @@
 
 		Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius
 		qui repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam?
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam?
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam?
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
+		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam? Lorem
+		ipsum dolor sit amet consectetur adipisicing elit. Assumenda non eius qui
+		repellendus eum corporis saepe quidem commodi, quasi iste obcaecati
 		consequuntur ipsam perferendis sunt dolor cumque eaque possimus quam?
 
 		<script src="./scripts/header.js"></script>
