--- a/header.html
+++ b/header.html
@@ -321,6 +321,199 @@
 											</defs>
 										</svg>
 									</button>
+
+									<div class="callus-dropdown__mobile">
+										<ul class="main-phone">
+											<li>
+												<a class="main-phone__element" href="#"
+													>+48 555 012 456 - Wroclaw</a
+												>
+											</li>
+											<li>
+												<a class="main-phone__element" href="#"
+													>+48 555 012 456 - Wroclaw</a
+												>
+											</li>
+											<li>
+												<a class="main-phone__element" href="#"
+													>+48 555 012 456 - Wroclaw</a
+												>
+											</li>
+											<li>
+												<a class="main-phone__element" href="#"
+													>+48 555 012 456 - Wroclaw</a
+												>
+											</li>
+										</ul>
+
+										<ul class="messagners-list">
+											<li>
+												<svg
+													class="messagners-list__icon"
+													width="20"
+													height="20"
+													viewBox="0 0 20 20"
+													fill="none"
+													xmlns="http://www.w3.org/2000/svg"
+												>
+													<g clip-path="url(#clip0_632_160)">
+														<path
+															d="M19.2954 11.5774C19.8921 6.5549 19.0087 3.38406 17.4154 1.9499L17.4162 1.94906C14.8446 -0.500102 6.15958 -0.862602 3.08291 2.05906C1.70124 3.48823 1.21458 5.58573 1.16124 8.1824C1.10791 10.7799 1.04458 15.6457 5.57874 16.9657H5.58291L5.57874 18.9816C5.57874 18.9816 5.54791 19.7982 6.06958 19.9624C6.66624 20.1557 6.93624 19.7766 8.79208 17.5599C11.8954 17.8291 14.2787 17.2124 14.5496 17.1224C15.1762 16.9124 18.7221 16.4432 19.2954 11.5774ZM9.09791 16.1416C9.09791 16.1416 7.13374 18.5907 6.52291 19.2266C6.32291 19.4332 6.10374 19.4141 6.10708 19.0041C6.10708 18.7349 6.12208 15.6574 6.12208 15.6574C2.27791 14.5557 2.50458 10.4124 2.54624 8.2449C2.58791 6.07657 2.98458 4.30073 4.15458 3.1049C6.85374 0.574065 14.4679 1.1399 16.4079 2.96323C18.7796 5.06573 17.9354 11.0057 17.9404 11.2082C17.4529 15.2699 14.5796 15.5274 14.0512 15.7032C13.8254 15.7782 11.7296 16.3174 9.09791 16.1416Z"
+															fill="url(#paint0_linear_632_160)"
+														/>
+														<path
+															d="M10.185 3.58081C9.86413 3.58081 9.86413 4.08081 10.185 4.08498C12.6741 4.10414 14.7241 5.83914 14.7466 9.02164C14.7466 9.35748 15.2383 9.35331 15.2341 9.01748C15.2075 5.58831 12.9683 3.59998 10.185 3.58081Z"
+															fill="url(#paint1_linear_632_160)"
+														/>
+														<path
+															d="M13.4585 8.49405C13.451 8.82572 13.9419 8.84155 13.946 8.50572C13.9869 6.61488 12.821 5.05738 10.6302 4.89322C10.3094 4.86988 10.276 5.37405 10.596 5.39738C12.496 5.54155 13.4969 6.83822 13.4585 8.49405ZM12.9335 10.6449C12.5219 10.4066 12.1027 10.5549 11.9294 10.789L11.5669 11.2582C11.3827 11.4966 11.0385 11.4649 11.0385 11.4649C8.52686 10.8007 7.8552 8.17238 7.8552 8.17238C7.8552 8.17238 7.82436 7.81655 8.05436 7.62572L8.5077 7.25072C8.73436 7.07072 8.8777 6.63738 8.64686 6.21155C8.0302 5.09738 7.61603 4.71322 7.4052 4.41822C7.18353 4.14072 6.8502 4.07822 6.50353 4.26572H6.49603C5.7752 4.68738 4.98603 5.47655 5.23853 6.28905C5.66936 7.14572 6.46103 9.87655 8.98436 11.9399C10.1702 12.9157 12.0469 13.9157 12.8435 14.1466L12.851 14.1582C13.636 14.4199 14.3994 13.5999 14.8069 12.8574V12.8516C14.9877 12.4924 14.9277 12.1524 14.6635 11.9299C14.1952 11.4732 13.4885 10.9691 12.9335 10.6449Z"
+															fill="url(#paint2_linear_632_160)"
+														/>
+														<path
+															d="M10.9741 6.75323C11.775 6.7999 12.1633 7.21823 12.205 8.0774C12.22 8.41323 12.7075 8.3899 12.6925 8.05407C12.6391 6.9324 12.0541 6.3074 11.0008 6.24907C10.68 6.2299 10.65 6.73407 10.9741 6.75323Z"
+															fill="url(#paint3_linear_632_160)"
+														/>
+													</g>
+													<defs>
+														<linearGradient
+															id="paint0_linear_632_160"
+															x1="1.14941"
+															y1="-0.0111084"
+															x2="20.0761"
+															y2="0.566687"
+															gradientUnits="userSpaceOnUse"
+														>
+															<stop stop-color="#092B96" />
+															<stop offset="1" stop-color="#086CDC" />
+														</linearGradient>
+														<linearGradient
+															id="paint1_linear_632_160"
+															x1="9.94434"
+															y1="3.58081"
+															x2="15.4052"
+															y2="3.75002"
+															gradientUnits="userSpaceOnUse"
+														>
+															<stop stop-color="#092B96" />
+															<stop offset="1" stop-color="#086CDC" />
+														</linearGradient>
+														<linearGradient
+															id="paint2_linear_632_160"
+															x1="5.19043"
+															y1="4.15833"
+															x2="15.2243"
+															y2="4.48182"
+															gradientUnits="userSpaceOnUse"
+														>
+															<stop stop-color="#092B96" />
+															<stop offset="1" stop-color="#086CDC" />
+														</linearGradient>
+														<linearGradient
+															id="paint3_linear_632_160"
+															x1="10.7451"
+															y1="6.24854"
+															x2="12.7557"
+															y2="6.31161"
+															gradientUnits="userSpaceOnUse"
+														>
+															<stop stop-color="#092B96" />
+															<stop offset="1" stop-color="#086CDC" />
+														</linearGradient>
+														<clipPath id="clip0_632_160">
+															<rect width="20" height="20" fill="white" />
+														</clipPath>
+													</defs>
+												</svg>
+
+												<a href="#" class="messagners-list__link">Viber</a>
+											</li>
+											<li>
+												<svg
+													class="messagners-list__icon"
+													width="20"
+													height="20"
+													viewBox="0 0 20 20"
+													fill="none"
+													xmlns="http://www.w3.org/2000/svg"
+												>
+													<path
+														d="M7.84765 12.6508L7.51682 17.3041C7.99015 17.3041 8.19515 17.1008 8.44098 16.8566L10.6601 14.7358L15.2585 18.1033C16.1018 18.5733 16.696 18.3258 16.9235 17.3274L19.9418 3.1841L19.9426 3.18326C20.2101 1.9366 19.4918 1.4491 18.6701 1.75493L0.928482 8.54743C-0.282352 9.01743 -0.264018 9.69243 0.722648 9.99826L5.25848 11.4091L15.7943 4.8166C16.2901 4.48826 16.741 4.66993 16.3701 4.99826L7.84765 12.6508Z"
+														fill="url(#paint0_linear_632_532)"
+													/>
+													<defs>
+														<linearGradient
+															id="paint0_linear_632_532"
+															x1="0"
+															y1="1.66626"
+															x2="20.6331"
+															y2="2.49155"
+															gradientUnits="userSpaceOnUse"
+														>
+															<stop stop-color="#092B96" />
+															<stop offset="1" stop-color="#086CDC" />
+														</linearGradient>
+													</defs>
+												</svg>
+
+												<a href="#" class="messagners-list__link">Telegram</a>
+											</li>
+											<li>
+												<svg
+													class="messagners-list__icon"
+													width="20"
+													height="20"
+													viewBox="0 0 20 20"
+													fill="none"
+													xmlns="http://www.w3.org/2000/svg"
+												>
+													<g clip-path="url(#clip0_632_63)">
+														<path
+															d="M14.5893 11.9224L14.5818 11.9849C12.7493 11.0716 12.5576 10.9499 12.3209 11.3049C12.1568 11.5508 11.6784 12.1083 11.5343 12.2733C11.3884 12.4358 11.2434 12.4483 10.9959 12.3358C10.7459 12.2108 9.94345 11.9483 8.99345 11.0983C8.25345 10.4358 7.75678 9.62327 7.61012 9.37327C7.36595 8.9516 7.87678 8.8916 8.34178 8.0116C8.42512 7.8366 8.38261 7.6991 8.32095 7.57494C8.25845 7.44994 7.76095 6.22494 7.55261 5.7366C7.35261 5.24994 7.14678 5.3116 6.99261 5.3116C6.51261 5.26994 6.16178 5.2766 5.85261 5.59827C4.50761 7.0766 4.84678 8.6016 5.99761 10.2233C8.25928 13.1833 9.46428 13.7283 11.6676 14.4849C12.2626 14.6741 12.8051 14.6474 13.2343 14.5858C13.7126 14.5099 14.7068 13.9849 14.9143 13.3974C15.1268 12.8099 15.1268 12.3224 15.0643 12.2099C15.0026 12.0974 14.8393 12.0349 14.5893 11.9224Z"
+															fill="url(#paint0_linear_632_63)"
+														/>
+														<path
+															d="M17.1 2.87392C10.6925 -3.32025 0.0883333 1.17225 0.0841667 9.91058C0.0841667 11.6573 0.541667 13.3606 1.41333 14.8648L0 19.9998L5.27917 18.6231C11.8667 22.1814 19.9967 17.4564 20 9.91558C20 7.26892 18.9667 4.77808 17.0875 2.90642L17.1 2.87392ZM18.335 9.88809C18.33 16.2489 11.3475 20.2214 5.825 16.9748L5.525 16.7964L2.4 17.6089L3.2375 14.5714L3.03833 14.2589C-0.398333 8.78809 3.55 1.63808 10.06 1.63808C11.1471 1.63535 12.224 1.84827 13.2283 2.26452C14.2326 2.68077 15.1444 3.29209 15.9108 4.06308C16.6815 4.8244 17.2927 5.73159 17.7089 6.7317C18.1251 7.73182 18.338 8.80482 18.335 9.88809Z"
+															fill="url(#paint1_linear_632_63)"
+														/>
+													</g>
+													<defs>
+														<linearGradient
+															id="paint0_linear_632_63"
+															x1="4.98047"
+															y1="5.29358"
+															x2="15.4242"
+															y2="5.67085"
+															gradientUnits="userSpaceOnUse"
+														>
+															<stop stop-color="#092B96" />
+															<stop offset="1" stop-color="#086CDC" />
+														</linearGradient>
+														<linearGradient
+															id="paint1_linear_632_63"
+															x1="0"
+															y1="-0.000610352"
+															x2="20.6437"
+															y2="0.687489"
+															gradientUnits="userSpaceOnUse"
+														>
+															<stop stop-color="#092B96" />
+															<stop offset="1" stop-color="#086CDC" />
+														</linearGradient>
+														<clipPath id="clip0_632_63">
+															<rect width="20" height="20" fill="white" />
+														</clipPath>
+													</defs>
+												</svg>
+
+												<a href="#" class="messagners-list__link">Whatsapp</a>
+											</li>
+										</ul>
+
+										<p class="callus-dropdown__mobile-shedule">
+											пн-пт. - 09.00 до 17.00 <br />
+											сб. - по записи
+										</p>
+									</div>
 								</div>
 
 								<button
